Temp fix for favicon on mobile view

--- a/public/css/feeds.css
+++ b/public/css/feeds.css
@@ -78,7 +78,7 @@
   }
 
   .feeds .remove,
-  .feeds .feed .icon {
+  .feeds .feed .img-container {
     display: none;
   }
 
